edit the title name.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>ACM ISS'18 Workshops on Computational Augmented Reality Display (CARD)</title>
+    <title>ACM ISS Workshop on Computational Augmented Reality Displays (CARD) 2018</title>
 
     <!-- favicon -->
     <link href="favicon.png" rel=icon>
