update workshop name.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>ACM ISS Workshop on Computational Augmented Reality Displays (CARD) 2018</title>
+    <title>ACM ISS'18 International Workshop on Computational Augmented Reality Displays (CARD) 2018</title>
 
     <!-- favicon -->
     <link href="favicon.png" rel=icon>
@@ -56,7 +56,7 @@
                         <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                         <li class="hidden"><a href="#page-top"></a></li>
                         <li><a class="page-scroll" href="#section-intro">Call for Paticipants</a></li>
-                        <li><a class="page-scroll" href="#section-speaker">Keynote Speakers</a></li>
+                        <li><a class="page-scroll" href="#section-speaker">Speakers</a></li>
                         <li><a class="page-scroll" href="#section-agenda">Agenda</a></li>
                         <li><a class="page-scroll" href="#section-partner">Sponsors</a></li>
                         <li><a class="page-scroll" href="#section-venue">Venue</a></li>
@@ -75,8 +75,8 @@
     <div class="jumbotron text-center">
         <div class="content">
             <div class="event-date">NOVEMBER 26, 2018, Nomura Conference Plaza Nihonbashi, TOKYO</div>
-            <h1>ACM ISS Workshops on</h1>
-			<h1>Computational Augmented Reality Displays 2018</h1>
+            <h1>ACM ISS'18 International Workshop on</h1>
+			<h1>Computational Augmented Reality Displays</h1>
             <p class="lead">
 			More details will available soon
 			</p>
