--- a/index.html
+++ b/index.html
@@ -415,26 +415,91 @@
     </section>
     <!-- .client-logo -->
 
-<!--
     <section id="section-venue" class="section-wrapper  gray-bg">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <div class="section-title">
-                        <h1>THE VENUE</h1>
+                        <h1>Workshop Venue</h1>
 
-                        <p>Credibly recaptiualize cutting-edge functionalities vis-a-vis intuitive growth strategies. Appropriately evolve open-source potentialities via goal-oriented e-business. Enthusiastically target go forward scenarios and visionary "outside the box" thinking. Professionally administrate cost effective sources without corporate convergence.</p>
+                        <p>
+						The workshop will be held at the 
+						<a href="http://www.nomura-nihonbashi.com/conference/access_en.html" target="_blank"> 
+						Nomura Conference Plaza Nihonbashi 
+						</a>
+						in central Tokyo, Japan. 
+						Located in Nihonbashi, the commercial heart of Edo — Tokyo's former name in its bygone feudal days — the surrounding area has been the scenery of countless Ukiyo-e prints and is now a bustling center of business and culture. 
+						With Akihabara to the north, Ginza to the south, and the Imperial Palace to the west, the area is within short distances to a number of sightseeing spots as well.
+						</p>
                     </div>
                 </div>
             </div>
             <!-- /.row-->
-<!--
+			
             <div class="row">
                 <div class="col-md-12">
                     <div id="googleMap"></div>
                 </div>
             </div>
             <!-- .row-->
+			
+    <section id="section-organizer" class="section-wrapper team gray-bg">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="section-title">
+                        <h1>ORGANIZERS</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 col-md-4">
+                    <figure class="thumbnail" target="_blank">
+                        <a href="http://daisukeiwai.org/">
+						<img src="img/img-orz-daisuke.jpg" class="img-responsive" alt="Daisuke Iwai">
+						</a>
+                        <figcaption class="caption text-center">
+                            <h3>Daisuke Iwai
+                                <small>Osaka University</small>
+                            </h3>
+                        </figcaption>
+                    </figure>
+                </div>
+                <!-- /.col-sm-6 -->
+                <div class="col-sm-6 col-md-4">
+                    <figure class="thumbnail">
+                        <a href="http://www.ar.c.titech.ac.jp/cpt_people/yuta-itoh/" target="_blank">
+						<img src="img/img-orz-yuta.jpg" class="img-responsive" alt="Yuta Itoh">
+						</a>
+                        <figcaption class="caption text-center">
+                            <h3>Yuta Itoh
+                                <small>Tokyo Institute of Technology</small>
+                            </h3>
+                        </figcaption>
+                    </figure>
+                </div>
+                <!-- /.col-sm-6 -->
+                <div class="col-sm-6 col-md-4">
+                    <figure class="thumbnail">
+                        <a href="https://punpongsanon.info/" target="_blank">
+						<img src="img/img-orz-parinya.jpg" class="img-responsive" alt="Parinya Punpongsanon">
+						</a>
+                        <figcaption class="caption text-center">
+                            <h3>Parinya Punpongsanon
+                                <small>Osaka University</small>
+                            </h3>
+                        </figcaption>
+                    </figure>
+                </div>
+                <!-- /.col-sm-6 -->
+            </div>
+            <!-- .row -->			
+        </div>
+        <!-- /.container -->
+    </section>
+    <!-- .organizer -->
+	
+	
 <!--
             <div class="row">
                 <div class="col-md-12">
