--- a/index.html
+++ b/index.html
@@ -438,7 +438,9 @@
 			
             <div class="row">
                 <div class="col-md-12">
-                    <div id="googleMap"></div>
+                    <div id="googleMap">
+					<iframe width="100%" height="320" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.co.jp/maps?hl=en-us&ll=ll=35.687646, 139.773933&#038;q=2-4-3, Nihonbashimuromachi, Chuo-ku, Tokyo&#038;output=embed&#038;t=m&#038;z=16"></iframe>
+					</div>
                 </div>
             </div>
             <!-- .row-->
