--- a/index.html
+++ b/index.html
@@ -438,9 +438,8 @@
 			
             <div class="row">
                 <div class="col-md-12">
-                    <div id="googleMap">
-					<iframe width="100%" height="320" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.co.jp/maps?hl=en-us&ll=ll=35.687646, 139.773933&#038;q=2-4-3, Nihonbashimuromachi, Chuo-ku, Tokyo&#038;output=embed&#038;t=m&#038;z=16"></iframe>
-					</div>
+                    <iframe width="100%" height="320" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.577041300739!2d139.77174431615705!3d35.68741518019285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601889556d8a2603%3A0xe6543cb5903acaf6!2s2+Chome-4-3+Nihonbashimuromachi%2C+Ch%C5%AB%C5%8D-ku%2C+T%C5%8Dky%C5%8D-to+103-0022!5e0!3m2!1sen!2sjp!4v1534723426241" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+					</iframe>
                 </div>
             </div>
             <!-- .row-->
