--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <ul class="nav navbar-nav">
                         <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                         <li class="hidden"><a href="#page-top"></a></li>
-                        <li><a class="page-scroll" href="#section-intro">Call for Paticipants</a></li>
+                        <li><a class="page-scroll" href="#section-call">Call for Paticipants</a></li>
                         <li><a class="page-scroll" href="#section-speaker">Speakers</a></li>
                         <li><a class="page-scroll" href="#section-agenda">Agenda</a></li>
                         <li><a class="page-scroll" href="#section-partner">Sponsors</a></li>
@@ -78,32 +78,111 @@
             <h1>ACM ISS'18 International Workshop on</h1>
 			<h1>Computational Augmented Reality Displays</h1>
             <p class="lead">
-			More details will available soon
+			
 			</p>
-            <button type="button" class="btn btn-default btn-lg">CALL FOR PARTICIPANTS</button>
+			<a class="page-scroll" href="#section-call">
+            <button type="button" class="btn btn-default btn-lg">
+			CALL FOR PARTICIPANTS	
+			</button>
+			</a>
         </div>
     </div>
     <!-- .Jumbotron-->
 
-<!--
-    <section id="section-intro" class="section-wrapper about-event">
+
+    <section id="section-call" class="section-wrapper about-event">
         <div class="container">
             <div class="row">
+				<h1>CALL FOR PARTICIPANTS</h1>
                 <div class="col-md-8">
-                    <p class="lead">
-                        Quickly disintermediate empowered methodologies with ubiquitous best practices. Distinctively fabricate exceptional niches with technically sound technologies. Professionally revolutionize seamless synergy with real-time imperatives. Interactively pursue top-line bandwidth whereas visionary e-services.
+                    <p class="follow">
+                        Computational display is an emerging concept of display technology, defined as the joint design of hardware and display optics with computational algorithms and perceptual considerations. 
+						Researchers in various fields such as optics, computer graphics, virtual reality (VR) and augmented reality (AR) 
+						are actively worked on this topic and overcoming technical limitations of existing displays. Although these new technologies are 
+						promising to push interactive surfaces and spaces (ISS) research forward, interactions between researchers in the different communities were 
+						unfortunately not so active at the moment. The goal of this workshop is to bridge the communities by promoting the communications each other.
+						<br/>
+						<br/>
+						This workshop focuses particularly on computational AR displays, which we believe are closely related to the ISS community. 
+						They include (but not limited to) light field display, head-mounted display, optical see-through display, and projection display. 
+						For example, projection mapping turns immediate real world surfaces into interactive surfaces, and head mounted see-through displays make real spaces interactive. 
+						On top of that, the workshop also covers recent computational fabrication research that provides new display materials such as the color-changing materials (photochromism) 
+						that adding the functional on a regular 3D object. As proven in the history, the ISS community could invent novel interaction techniques based on emerging AR displays. 
+						At the same time, these new interaction techniques could inspire display researchers to develop more advanced and useful display principles. 
+						Such tightly coupled positive feedback loop will powerfully drive both research domains. 
+						The workshop will provide a supportive environment to share the state-of-the-art technologies among the attendees.
                     </p>
-                    <p class="lead">
-                        Distinctively benchmark client-focused opportunities vis-a-vis 24/365 relationships. Progressively revolutionize equity invested synergy whereas emerging web services.
+                    <p class="follow">
+                        We invite researchers and visionaries to submit their latest results on any aspects that are relevant for computational AR displays and as well as novel interaction technologies. 
+						Contributions of more fundamental work (e.g., perceptual studies and empirical research about displays) are welcome as well as more technical contributions (including best-practice demonstrations, 
+						prototype systems, etc.). 
+						Position papers and reviews of the state-of-the art and ongoing research are invited, too. Topic areas include (but not limited to):
+						<br/>
+						<ul class="follow" style="list-style-type:circle">
+							<li>Projection Mapping</li>
+							<li>Optical See-Through Displays</li>
+							<li>Head-Mounted Displays</li>
+							<li>Light Field Displays</li>
+							<li>Mid-Air Displays</li>
+							<li>Tangible Displays</li>
+							<li>Other Types of AR Displays</li>
+							<li>Display Optics</li>
+							<li>Display Surfaces</li>
+							<li>Display Materials</li>
+							<li>Computational Fabrication</li>
+							<li>Human Perceptions</li>
+							<li>Interaction Techniques for Emerging Displays</li>
+						</ul>
+						<br/>
                     </p>
+                    <p class="follow">
+                        <strong>Preparing the submission</strong>
+						<br/>
+
+						All submissions must include an extended abstract with a maximum of 6 pages (incl. all figures and references) in the 
+						<a href="https://sigchi.org/templates/" target="_blank">2014 SIGCHI Extended Abstracts format</a>. 
+						The reviewing of abstracts will be single-blind -- that is, your submission should *not* be anonymized but reviewers will remain anonymous to you. 
+						All submissions must include author names and affiliations. 
+						Authors are recommended to submit their supplementary videos (up to 3 minutes, at most 50 MB in size). 
+						The current submission system does not allow to directly upload the video files. 
+						Please upload the videos on external servers such as <a href="https://www.dropbox.com/" target="_blank">Dropbox</a> and indicate their URLs in the extended abstracts. 
+						The accepted extended abstract will be published in the <a href="https://dl.acm.org/" target="_blank">ACM Digital Library</a>. 
+						Your extended abstract, poster design and optional video should be <b>submitted by September 7, 2018 to the submission system</b>. 
+						The abstract must be in a PDF format.
+                    </p>						
                 </div>
                 <div class="col-md-4">
                     <address>
-                        <strong>Eventas, Inc.</strong><br>
-                        1355 Market Street<br>
-                        Suite 900<br>
-                        San Francisco, CA 94103<br>
-                        <abbr title="Phone">P:</abbr> (123) 456-7890
+                        <strong>Important Dates</strong>
+						<br/>
+                        Sep 7, 2018: 
+						<br/>
+						Deadline for submissions
+						<br/>
+                        Sep 10, 2018: 
+						<br/>
+						Author notifications
+						<br/>
+                        Sep 26, 2018:
+						<br/>
+						Camera ready deadline
+						<br/>
+                        Nov 25, 2018
+						<br/>
+						CARD workshop at ACM ISS in Tokyo
+						<br/>
+						<br/>
+						
+						<strong>Quick Links</strong>
+						<br/>
+						Formatting instructions: 
+						<br/>
+						<a href="https://sigchi.org/templates/" target="_blank">SIGCHI Extended Abstracts</a>
+						<br/>
+						Submission at:
+						<br/>
+						<a href="https://easychair.org/conferences/?conf=card2018" target="_blank">EasyChair/card2018</a>
+						<br/>
                     </address>
                 </div>
             </div>
