--- a/index.html
+++ b/index.html
@@ -157,15 +157,15 @@
 						<br/>
                         Sep 7, 2018: 
 						<br/>
-						Deadline for submissions
+						<strike>Deadline for submissions</strike>
 						<br/>
                         Sep 10, 2018: 
 						<br/>
-						Author notifications
+						<strike>Author notifications</strike>
 						<br/>
                         Sep 26, 2018:
 						<br/>
-						Camera ready deadline
+						<strike>Camera ready deadline</strike>
 						<br/>
                         Nov 25, 2018
 						<br/>
@@ -182,6 +182,7 @@
 						Submission at:
 						<br/>
 						<a href="https://easychair.org/conferences/?conf=card2018" target="_blank">EasyChair/card2018</a>
+						<br/>
 						<br/>
                     </address>
                 </div>
