update speakers list.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
                         <li><a class="page-scroll" href="#section-call">Call for Paticipants</a></li>
                         <li><a class="page-scroll" href="#section-speaker">Speakers</a></li>
                         <li><a class="page-scroll" href="#section-agenda">Agenda</a></li>
-                        <li><a class="page-scroll" href="#section-partner">Sponsors</a></li>
                         <li><a class="page-scroll" href="#section-venue">Venue</a></li>
 						<li><a class="page-scroll" href="#section-organizer">Organizer</a></li>
                     </ul>
@@ -80,9 +79,9 @@
             <p class="lead">
 			
 			</p>
-			<a class="page-scroll" href="#section-call">
+			<a class="page-scroll" href="#section-speaker">
             <button type="button" class="btn btn-default btn-lg">
-			CALL FOR PARTICIPANTS	
+			SPEAKERS
 			</button>
 			</a>
         </div>
@@ -191,191 +190,134 @@
     </section>
     <!-- .about-event -->
 
-<!--
     <section id="section-speaker" class="section-wrapper team gray-bg">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <div class="section-title">
-                        <h1>SPEAKERS</h1>
+                        <h1>INVITED SPEAKERS</h1>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="#"><img src="img/img-team-1.jpg" class="img-responsive" alt="Image"></a>
+                        <a href="#"><img src="img/speakers/kiyoshi-kiyokawa.jpg" class="img-responsive" alt="kiyoshi-kiyokawa"></a>
                         <figcaption class="caption text-center">
-                            <h3>Tom Hoffmann
-                                <small>Cintas</small>
+                            <h3>Kiyoshi Kiyokawa</a>
+                                <small><a href="https://carelab.info/ja/kiyoshi-kiyokawa/">NAIST</a></small>
                             </h3>
-                            <ul class="social-links">
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                <li><a href="#"><i class="fa fa-envelope"></i></a></li>
-                            </ul>
                         </figcaption>
                     </figure>
                 </div>
                 <!-- /.col-sm-6 -->
-<!--
+
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="#"><img src="img/img-team-2.jpg" class="img-responsive" alt="Image"></a>
+                        <a href="#"><img src="img/speakers/tobias-langlotz.jpg" class="img-responsive" alt="tobias-langlotz"></a>
                         <figcaption class="caption text-center">
-                            <h3>Zoe Krämer
-                                <small>Earthlink</small>
+                            <h3>Tobias Langlotz
+                                <small><a href="https://www.otago.ac.nz/info-science/people/tobias-langlotz.html">University of Otago</a></small>
                             </h3>
-                            <ul class="social-links">
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                <li><a href="#"><i class="fa fa-envelope"></i></a></li>
-                            </ul>
                         </figcaption>
                     </figure>
                 </div>
                 <!-- /.col-sm-6 -->
-<!--
+
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="#"><img src="img/img-team-3.jpg" class="img-responsive" alt="Image"></a>
+                        <a href="#"><img src="img/speakers/toshiyuki-amano.jpg" class="img-responsive" alt="toshiyuki-amano"></a>
                         <figcaption class="caption text-center">
-                            <h3>Helena Kühn
-                                <small>Herman</small>
+                            <h3>Toshiyuki Amano
+                                <small><a href="http://www.wakayama-u.ac.jp/~amano/index.html">Wakayama University</a></small>
                             </h3>
-                            <ul class="social-links">
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                <li><a href="#"><i class="fa fa-envelope"></i></a></li>
-                            </ul>
                         </figcaption>
                     </figure>
                 </div>
                 <!-- /.col-sm-6 -->
-<!--
+
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="#"><img src="img/img-team-4.jpg" class="img-responsive" alt="Image"></a>
+                        <a href="#"><img src="img/speakers/yoshihiro-watanabe.jpg" class="img-responsive" alt="yoshihiro-watanabe"></a>
                         <figcaption class="caption text-center">
-                            <h3>Leon Werner
-                                <small>Level</small>
+                            <h3>Yoshihiro Watanabe
+                                <small><a href="http://www.vision.ict.e.titech.ac.jp/">Tokyo Institute of Technology</a></small>
                             </h3>
-                            <ul class="social-links">
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                <li><a href="#"><i class="fa fa-envelope"></i></a></li>
-                            </ul>
                         </figcaption>
                     </figure>
                 </div>
                 <!-- /.col-sm-6 -->
-<!--
             </div>
             <!-- .row -->
-<!--			
+			
             <div class="row">
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="#"><img src="img/img-team-5.jpg" class="img-responsive" alt="Image"></a>
+                        <a href="#"><img src="img/img-team-4.jpg" class="img-responsive" alt=""></a>
                         <figcaption class="caption text-center">
-                            <h3>Alexander Ziegler
-                                <small>A.G. Edwards</small>
+                            <h3>
+                                <small><a href="#"></a></small>
                             </h3>
-                            <ul class="social-links">
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                <li><a href="#"><i class="fa fa-envelope"></i></a></li>
-                            </ul>
                         </figcaption>
                     </figure>
                 </div>
-                <!-- /.col-sm-6 -->
-<!--
+				<!-- /.col-sm-6 -->
+				
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="#"><img src="img/img-team-6.jpg" class="img-responsive" alt="Image"></a>
+                        <a href="#"><img src="img/speakers/hirotsugu-yamamoto.jpg" class="img-responsive" alt="hirotsugu-yamamoto"></a>
                         <figcaption class="caption text-center">
-                            <h3>Benedikt
-                                <small>Fitch Co.</small>
+                            <h3>Hirotsugu Yamamoto
+                                <small><a href="http://www.yamamotolab.science/eng/">Utsunomiya University</a></small>
                             </h3>
-                            <ul class="social-links">
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                <li><a href="#"><i class="fa fa-envelope"></i></a></li>
-                            </ul>
                         </figcaption>
                     </figure>
                 </div>
                 <!-- /.col-sm-6 -->
-<!--
+
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="#"><img src="img/img-team-7.jpg" class="img-responsive" alt="Image"></a>
+                        <a href="#"><img src="img/speakers/hashida-tomoko.jpg" class="img-responsive" alt="hashida-tomoko"></a>
                         <figcaption class="caption text-center">
-                            <h3>Lara Hahn
-                                <small>Acterna</small>
+                            <h3>Tomoko Hashida
+                                <small><a href="http://tomokohashida.tumblr.com/">Waseda University</a></small>
                             </h3>
-                            <ul class="social-links">
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                <li><a href="#"><i class="fa fa-envelope"></i></a></li>
-                            </ul>
                         </figcaption>
                     </figure>
                 </div>
                 <!-- /.col-sm-6 -->
-<!--
+
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="#"><img src="img/img-team-8.jpg" class="img-responsive" alt="Image"></a>
+                        <a href="#"><img src="img/img-team-4.jpg" class="img-responsive" alt=""></a>
                         <figcaption class="caption text-center">
-                            <h3>Elias Friedrichs
-                                <small>Adolph</small>
+                            <h3>
+                                <small><a href="#"></a></small>
                             </h3>
-                            <ul class="social-links">
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                <li><a href="#"><i class="fa fa-envelope"></i></a></li>
-                            </ul>
                         </figcaption>
                     </figure>
                 </div>
                 <!-- /.col-sm-6 -->
-<!--
             </div>
             <!-- .row -->
-<!--
-        </div>
-        <!-- /.container -->
-<!--
     </section>
     <!-- .team -->
 	
-<!--
+
     <section id="section-agenda" class="section-wrapper section-ajenda">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <div class="section-title">
-                        <h1>AJENDA</h1>
+                        <h1>AGENDA</h1>
                     </div>
                 </div>
             </div>
-
+<!--
             <div class="row">
                 <div class="col-md-4">
                     <div class="session">
-                        <time>8:30AM</time>
+                        <time>9:30AM</time>
                         <h2>Doors Open</h2>
                     </div>
                     <!-- .session -->
@@ -451,49 +393,11 @@
                         <h2>Cocktail and Networking Party</h2>
                     </div>
                     <!-- .session -->
-
-<!--
+			<!--
                 </div>
-            </div>
+            </div>-->
         </div>
-<!--
     </section>
-	
-<!--
-    <section id="section-partner" class="section-wrapper client-logo">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="section-title">
-                        <h1>PARTNERS</h1>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-2 col-sm-4 col-xs-6 section-margin">
-                    <a href="#"><img src="img/logo-client-1.jpg" alt="Image"></a>
-                </div>
-                <div class="col-md-2 col-sm-4 col-xs-6 section-margin">
-                    <a href="#"><img src="img/logo-client-2.jpg" alt="Image"></a>
-                </div>
-                <div class="col-md-2 col-sm-4 col-xs-6 section-margin">
-                    <a href="#"><img src="img/logo-client-3.jpg" alt="Image"></a>
-                </div>
-                <div class="col-md-2 col-sm-4 col-xs-6 section-margin">
-                    <a href="#"><img src="img/logo-client-4.jpg" alt="Image"></a>
-                </div>
-                <div class="col-md-2 col-sm-4 col-xs-6 section-margin">
-                    <a href="#"><img src="img/logo-client-5.jpg" alt="Image"></a>
-                </div>
-                <div class="col-md-2 col-sm-4 col-xs-6 section-margin">
-                    <a href="#"><img src="img/logo-client-6.jpg" alt="Image"></a>
-                </div>
-            </div>
-        </div>
-        <!--end of .container -->
-<!--
-    </section>
-    <!-- .client-logo -->
 
     <section id="section-venue" class="section-wrapper  gray-bg">
         <div class="container">
@@ -579,29 +483,6 @@
         <!-- /.container -->
     </section>
     <!-- .organizer -->
-	
-	
-<!--
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="section-title">
-                        <h2>STAY INFORMED</h2>
-                        <p>Don't miss the event!</p>
-                    </div>
-                    <form id="contactForm" class="subscribe-form form-inline" action="sendemail.php" method="POST">
-                        <div class="form-group">
-                            <label for="emailTwo" class="sr-only">Email</label>
-                            <input type="email" class="form-control input-lg" required="" id="emailTwo" name="email" placeholder="Enter your email address">
-                        </div>
-                        <button type="submit" class="btn btn-primary btn-lg">SUBSCRIBE</button>
-                    </form>
-                </div>
-            </div>
-
-        </div>
-    </section>
-    <!-- contact-section -->	
-
 
     <footer class="footer">
         <div class="copyright-section">
