add organizers personal website.

--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
 						</a>
                         <figcaption class="caption text-center">
                             <h3>Daisuke Iwai
-                                <small>Osaka University</small>
+                                <small><a href="http://daisukeiwai.org/">Osaka University</a></small>
                             </h3>
                         </figcaption>
                     </figure>
@@ -458,7 +458,7 @@
 						</a>
                         <figcaption class="caption text-center">
                             <h3>Yuta Itoh
-                                <small>Tokyo Institute of Technology</small>
+                                <a href="http://www.ar.c.titech.ac.jp/cpt_people/yuta-itoh/"><small>Tokyo Institute of Technology</small></small>
                             </h3>
                         </figcaption>
                     </figure>
@@ -471,7 +471,7 @@
 						</a>
                         <figcaption class="caption text-center">
                             <h3>Parinya Punpongsanon
-                                <small>Osaka University</small>
+                                <a href="https://punpongsanon.info/"><small>Osaka University</small></small>
                             </h3>
                         </figcaption>
                     </figure>
