add prof. koike.

--- a/index.html
+++ b/index.html
@@ -195,18 +195,19 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="section-title">
-                        <h1>INVITED SPEAKERS</h1>
+                        <h1>SPEAKERS</h1>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="#"><img src="img/speakers/kiyoshi-kiyokawa.jpg" class="img-responsive" alt="kiyoshi-kiyokawa"></a>
+                        <a href="https://carelab.info/ja/kiyoshi-kiyokawa/" target="_blank"><img src="img/speakers/kiyoshi-kiyokawa.jpg" class="img-responsive" alt="kiyoshi-kiyokawa"></a>
                         <figcaption class="caption text-center">
-                            <h3>Kiyoshi Kiyokawa</a>
-                                <small><a href="https://carelab.info/ja/kiyoshi-kiyokawa/">NAIST</a></small>
+                            <h3>Kiyoshi Kiyokawa
+                                <small>NAIST</small>
                             </h3>
+							<small>(invited)</small>
                         </figcaption>
                     </figure>
                 </div>
@@ -214,11 +215,12 @@
 
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="#"><img src="img/speakers/tobias-langlotz.jpg" class="img-responsive" alt="tobias-langlotz"></a>
+                        <a href="https://www.otago.ac.nz/info-science/people/tobias-langlotz.html" target="_blank"><img src="img/speakers/tobias-langlotz.jpg" class="img-responsive" alt="tobias-langlotz"></a>
                         <figcaption class="caption text-center">
                             <h3>Tobias Langlotz
-                                <small><a href="https://www.otago.ac.nz/info-science/people/tobias-langlotz.html">University of Otago</a></small>
+                                <small>University of Otago</small>
                             </h3>
+							<small>(invited)</small>
                         </figcaption>
                     </figure>
                 </div>
@@ -226,11 +228,12 @@
 
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="#"><img src="img/speakers/toshiyuki-amano.jpg" class="img-responsive" alt="toshiyuki-amano"></a>
+                        <a href="http://www.wakayama-u.ac.jp/~amano/index.html" target="_blank"><img src="img/speakers/toshiyuki-amano.jpg" class="img-responsive" alt="toshiyuki-amano"></a>
                         <figcaption class="caption text-center">
                             <h3>Toshiyuki Amano
-                                <small><a href="http://www.wakayama-u.ac.jp/~amano/index.html">Wakayama University</a></small>
+                                <small>Wakayama University</small>
                             </h3>
+							<small>(invited)</small>
                         </figcaption>
                     </figure>
                 </div>
@@ -238,11 +241,12 @@
 
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="#"><img src="img/speakers/yoshihiro-watanabe.jpg" class="img-responsive" alt="yoshihiro-watanabe"></a>
+                        <a href="http://www.vision.ict.e.titech.ac.jp/" target="_blank"><img src="img/speakers/yoshihiro-watanabe.jpg" class="img-responsive" alt="yoshihiro-watanabe"></a>
                         <figcaption class="caption text-center">
                             <h3>Yoshihiro Watanabe
-                                <small><a href="http://www.vision.ict.e.titech.ac.jp/">Tokyo Institute of Technology</a></small>
+                                <small>Tokyo Institute of Technology</small>
                             </h3>
+							<small>(invited)</small>
                         </figcaption>
                     </figure>
                 </div>
@@ -250,54 +254,56 @@
             </div>
             <!-- .row -->
 			
-            <div class="row">
+            <div class="row">				
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="#"><img src="img/img-team-4.jpg" class="img-responsive" alt=""></a>
+                        <a href="http://www.yamamotolab.science/eng/" target="_blank"><img src="img/speakers/hirotsugu-yamamoto.jpg" class="img-responsive" alt="hirotsugu-yamamoto"></a>
+                        <figcaption class="caption text-center">
+                            <h3>Hirotsugu Yamamoto
+                                <small>Utsunomiya University</small>
+                            </h3>
+							<small>(invited)</small>
+                        </figcaption>
+                    </figure>
+                </div>
+                <!-- /.col-sm-6 -->
+
+                <div class="col-sm-6 col-md-3">
+                    <figure class="thumbnail">
+                        <a href="http://tomokohashida.tumblr.com/" target="_blank"><img src="img/speakers/hashida-tomoko.jpg" class="img-responsive" alt="hashida-tomoko"></a>
+                        <figcaption class="caption text-center">
+                            <h3>Tomoko Hashida
+                                <small>Waseda University</small>
+                            </h3>
+							<small>(invited)</small>
+                        </figcaption>
+                    </figure>
+                </div>
+                <!-- /.col-sm-6 -->
+
+                <div class="col-sm-6 col-md-3">
+                    <figure class="thumbnail">
+                        <a href="http://tk-lab.org" target="_blank"><img src="img/speakers/takafumi-koike.jpg" class="img-responsive" alt="takafumi-koike"></a>
+                        <figcaption class="caption text-center">
+                            <h3>Takafumi Koike
+                                <small>Hosei University</small>
+                            </h3>
+                        </figcaption>
+                    </figure>
+                </div>
+                <!-- /.col-sm-6 -->
+				
+                <div class="col-sm-6 col-md-3">
+                    <figure class="thumbnail">
+                        <a href="#" target="_blank"><img src="img/img-team-4.jpg" class="img-responsive" alt=""></a>
                         <figcaption class="caption text-center">
                             <h3>
-                                <small><a href="#"></a></small>
+                                <small></small>
                             </h3>
                         </figcaption>
                     </figure>
                 </div>
 				<!-- /.col-sm-6 -->
-				
-                <div class="col-sm-6 col-md-3">
-                    <figure class="thumbnail">
-                        <a href="#"><img src="img/speakers/hirotsugu-yamamoto.jpg" class="img-responsive" alt="hirotsugu-yamamoto"></a>
-                        <figcaption class="caption text-center">
-                            <h3>Hirotsugu Yamamoto
-                                <small><a href="http://www.yamamotolab.science/eng/">Utsunomiya University</a></small>
-                            </h3>
-                        </figcaption>
-                    </figure>
-                </div>
-                <!-- /.col-sm-6 -->
-
-                <div class="col-sm-6 col-md-3">
-                    <figure class="thumbnail">
-                        <a href="#"><img src="img/speakers/hashida-tomoko.jpg" class="img-responsive" alt="hashida-tomoko"></a>
-                        <figcaption class="caption text-center">
-                            <h3>Tomoko Hashida
-                                <small><a href="http://tomokohashida.tumblr.com/">Waseda University</a></small>
-                            </h3>
-                        </figcaption>
-                    </figure>
-                </div>
-                <!-- /.col-sm-6 -->
-
-                <div class="col-sm-6 col-md-3">
-                    <figure class="thumbnail">
-                        <a href="#"><img src="img/img-team-4.jpg" class="img-responsive" alt=""></a>
-                        <figcaption class="caption text-center">
-                            <h3>
-                                <small><a href="#"></a></small>
-                            </h3>
-                        </figcaption>
-                    </figure>
-                </div>
-                <!-- /.col-sm-6 -->
             </div>
             <!-- .row -->
     </section>
@@ -445,7 +451,7 @@
 						</a>
                         <figcaption class="caption text-center">
                             <h3>Daisuke Iwai
-                                <small><a href="http://daisukeiwai.org/">Osaka University</a></small>
+                                <small>Osaka University</small>
                             </h3>
                         </figcaption>
                     </figure>
@@ -458,7 +464,7 @@
 						</a>
                         <figcaption class="caption text-center">
                             <h3>Yuta Itoh
-                                <a href="http://www.ar.c.titech.ac.jp/cpt_people/yuta-itoh/"><small>Tokyo Institute of Technology</small></small>
+                                <small>Tokyo Institute of Technology</small>
                             </h3>
                         </figcaption>
                     </figure>
@@ -471,7 +477,7 @@
 						</a>
                         <figcaption class="caption text-center">
                             <h3>Parinya Punpongsanon
-                                <a href="https://punpongsanon.info/"><small>Osaka University</small></small>
+                                <small>Osaka University</small>
                             </h3>
                         </figcaption>
                     </figure>
