add tobias image and remove unused pictures.

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="https://www.otago.ac.nz/info-science/people/tobias-langlotz.html" target="_blank"><img src="img/speakers/tobias-langlotz.jpg" class="img-responsive" alt="tobias-langlotz"></a>
+                        <a href="http://www.hci.otago.ac.nz/" target="_blank"><img src="img/speakers/tobias-langlotz.jpg" class="img-responsive" alt="tobias-langlotz"></a>
                         <figcaption class="caption text-center">
                             <h3>Tobias Langlotz
                                 <small>University of Otago</small>
