--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@
             <div class="row">
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="https://carelab.info/ja/kiyoshi-kiyokawa/" target="_blank"><img src="img/speakers/kiyoshi-kiyokawa.jpg" class="img-responsive" alt="kiyoshi-kiyokawa"></a>
+                        <img src="img/speakers/kiyoshi-kiyokawa.jpg" class="img-responsive" alt="kiyoshi-kiyokawa">
                         <figcaption class="caption text-center">
-                            <h3>Kiyoshi Kiyokawa
+                            <h3><a class a-blue" href="https://carelab.info/ja/kiyoshi-kiyokawa/" target="_blank">Kiyoshi Kiyokawa</a>
                                 <small>NAIST</small>
                             </h3>
 							<small>(invited)</small>
@@ -215,9 +215,9 @@
 
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="http://www.hci.otago.ac.nz/" target="_blank"><img src="img/speakers/tobias-langlotz.jpg" class="img-responsive" alt="tobias-langlotz"></a>
+                        <img src="img/speakers/tobias-langlotz.jpg" class="img-responsive" alt="tobias-langlotz">
                         <figcaption class="caption text-center">
-                            <h3>Tobias Langlotz
+                            <h3><a href="http://www.hci.otago.ac.nz/" target="_blank">Tobias Langlotz</a>
                                 <small>University of Otago</small>
                             </h3>
 							<small>(invited)</small>
@@ -228,9 +228,9 @@
 
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="http://www.wakayama-u.ac.jp/~amano/index.html" target="_blank"><img src="img/speakers/toshiyuki-amano.jpg" class="img-responsive" alt="toshiyuki-amano"></a>
+                        <img src="img/speakers/toshiyuki-amano.jpg" class="img-responsive" alt="toshiyuki-amano">
                         <figcaption class="caption text-center">
-                            <h3>Toshiyuki Amano
+                            <h3><a href="http://www.wakayama-u.ac.jp/~amano/index.html" target="_blank">Toshiyuki Amano</a>
                                 <small>Wakayama University</small>
                             </h3>
 							<small>(invited)</small>
@@ -241,9 +241,9 @@
 
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="http://www.vision.ict.e.titech.ac.jp/" target="_blank"><img src="img/speakers/yoshihiro-watanabe.jpg" class="img-responsive" alt="yoshihiro-watanabe"></a>
+                        <img src="img/speakers/yoshihiro-watanabe.jpg" class="img-responsive" alt="yoshihiro-watanabe">
                         <figcaption class="caption text-center">
-                            <h3>Yoshihiro Watanabe
+                            <h3><a href="http://www.vision.ict.e.titech.ac.jp/" target="_blank">Yoshihiro Watanabe</a>
                                 <small>Tokyo Institute of Technology</small>
                             </h3>
 							<small>(invited)</small>
@@ -257,9 +257,9 @@
             <div class="row">				
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="http://www.yamamotolab.science/eng/" target="_blank"><img src="img/speakers/hirotsugu-yamamoto.jpg" class="img-responsive" alt="hirotsugu-yamamoto"></a>
+                        <img src="img/speakers/hirotsugu-yamamoto.jpg" class="img-responsive" alt="hirotsugu-yamamoto">
                         <figcaption class="caption text-center">
-                            <h3>Hirotsugu Yamamoto
+                            <h3><a href="http://www.yamamotolab.science/eng/" target="_blank">Hirotsugu Yamamoto</a>
                                 <small>Utsunomiya University</small>
                             </h3>
 							<small>(invited)</small>
@@ -270,9 +270,9 @@
 
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="http://tomokohashida.tumblr.com/" target="_blank"><img src="img/speakers/hashida-tomoko.jpg" class="img-responsive" alt="hashida-tomoko"></a>
+                        <img src="img/speakers/hashida-tomoko.jpg" class="img-responsive" alt="hashida-tomoko">
                         <figcaption class="caption text-center">
-                            <h3>Tomoko Hashida
+                            <h3><a href="http://tomokohashida.tumblr.com/" target="_blank">Tomoko Hashida</a>
                                 <small>Waseda University</small>
                             </h3>
 							<small>(invited)</small>
@@ -283,9 +283,9 @@
 
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="http://tk-lab.org" target="_blank"><img src="img/speakers/takafumi-koike.jpg" class="img-responsive" alt="takafumi-koike"></a>
+                        <img src="img/speakers/takafumi-koike.jpg" class="img-responsive" alt="takafumi-koike">
                         <figcaption class="caption text-center">
-                            <h3>Takafumi Koike
+                            <h3><a href="http://tk-lab.org" target="_blank">Takafumi Koike</a>
                                 <small>Hosei University</small>
                             </h3>
                         </figcaption>
@@ -446,24 +446,21 @@
             <div class="row">
                 <div class="col-sm-6 col-md-4">
                     <figure class="thumbnail" target="_blank">
-                        <a href="http://daisukeiwai.org/">
 						<img src="img/img-orz-daisuke.jpg" class="img-responsive" alt="Daisuke Iwai">
-						</a>
                         <figcaption class="caption text-center">
-                            <h3>Daisuke Iwai
+                            <h3><a href="http://daisukeiwai.org/" target="_blank">Daisuke Iwai</a>
                                 <small>Osaka University</small>
                             </h3>
                         </figcaption>
+						</a>
                     </figure>
                 </div>
                 <!-- /.col-sm-6 -->
                 <div class="col-sm-6 col-md-4">
                     <figure class="thumbnail">
-                        <a href="http://www.ar.c.titech.ac.jp/cpt_people/yuta-itoh/" target="_blank">
 						<img src="img/img-orz-yuta.jpg" class="img-responsive" alt="Yuta Itoh">
-						</a>
                         <figcaption class="caption text-center">
-                            <h3>Yuta Itoh
+                            <h3><a href="http://www.ar.c.titech.ac.jp/cpt_people/yuta-itoh/" target="_blank">Yuta Itoh</a>
                                 <small>Tokyo Institute of Technology</small>
                             </h3>
                         </figcaption>
@@ -472,11 +469,9 @@
                 <!-- /.col-sm-6 -->
                 <div class="col-sm-6 col-md-4">
                     <figure class="thumbnail">
-                        <a href="https://punpongsanon.info/" target="_blank">
 						<img src="img/img-orz-parinya.jpg" class="img-responsive" alt="Parinya Punpongsanon">
-						</a>
                         <figcaption class="caption text-center">
-                            <h3>Parinya Punpongsanon
+                            <h3><a href="https://punpongsanon.info/" target="_blank">Parinya Punpongsanon</a>
                                 <small>Osaka University</small>
                             </h3>
                         </figcaption>
